Fix the spin animation on firefox

--- a/src/main.css
+++ b/src/main.css
@@ -175,6 +175,6 @@ footer ul li {
   }
 }
 
-.refresh-button.refreshing svg {
+.refresh-button.refreshing > svg {
   animation: spin 1s linear infinite;
 }
